# aoc2024

./: .gitignore  README.md
python/: pyproject.toml
python/day01/: day1.py
python/day02/: day2.py
python/day03/: day3.py
python/day04/: day4.py
